# sensor_camera_model

./: CMakeLists.txt  README.md
project_sensors/condor/: CMakeLists.txt
project_sensors/condor/acft/: CMakeLists.txt  logic.h
project_sensors/condor/acft/acft/: aero.h  aero0.cpp  aero0.h  aero1.cpp  aero1.h  aero2.cpp  aero2.h  aero3.cpp  aero3.h  iner.cpp  iner.h  prop.cpp  prop.h
project_sensors/condor/acft/control/: cntr.cpp  cntr.h  pid.cpp  pid.h  pid_factory.cpp  pid_factory.h  pid_functor.h  pid_mimo.cpp  pid_mimo.h  pid_p.cpp  pid_p.h  pid_prim.cpp  pid_prim.h  pid_secnd.cpp
project_sensors/condor/acft/guid/: guid.cpp  guid.h  trg.cpp  trg.h
project_sensors/condor/acft/init/: error_gen_att.cpp  error_gen_att.h  error_gen_single.cpp  error_gen_single.h  error_gen_triple.cpp  error_gen_triple.h  init_error.cpp  init_error.h
project_sensors/condor/acft/sens/: camera.cpp  camera.h  platform.cpp  platform.h  sens_single_inertial.cpp  sens_single_inertial.h  sens_single_no_walk.cpp  sens_single_no_walk.h  sens_single_noise.h  sens_single_one_use.h  sens_triple_acc.cpp  sens_triple_acc.h  sens_triple_gps.cpp  sens_triple_gps.h  sens_triple_gyr.cpp  sens_triple_gyr.h  sens_triple_mag.cpp  sens_triple_mag.h  suite.cpp  suite.h
project_sensors/condor/acft/st/: st_extra.h  sti.cpp  sti.h  trj_cntr.h  trj_gps_out.h  trj_img_truth.h  trj_nav_in.h  trj_nav_out.h  trj_sens_in.h  trj_sens_out.h  trj_truth.h  trj_vis_in.h  trj_vis_out.h
project_sensors/condor/acft_test/: CMakeLists.txt  Tapm.cpp  Tapm_plots.cpp  Tsensor.cpp  Tsti.cpp  main.cpp
project_sensors/condor/ang/: CMakeLists.txt  auxiliary.h  dual_quat.h  quat.h  tools.cpp  tools.h
project_sensors/condor/ang/rotate/: README.txt  dcm.cpp  dcm.h  euler.cpp  euler.h  rodrigues.cpp  rodrigues.h  rotv.cpp  rotv.h  so3_tangent.cpp  so3_tangent.h
project_sensors/condor/ang/transform/: README.txt  dual.cpp  dual.h  homogeneous.cpp  homogeneous.h  screw.cpp  screw.h  se3_tangent.cpp  se3_tangent.h  speu_dcm.cpp  speu_dcm.h  speu_rodrigues.cpp  speu_rodrigues.h  trfv.cpp  trfv.h
project_sensors/condor/ang_test/: CMakeLists.txt  Thowtouse.cpp  Thowtouse.h  Tintegr_compare.cpp  Tintegr_compare.h  Tintegration.cpp  Tintegration.h  Tscrew.cpp  Tscrew.h  Tse3.cpp  Tse3.h  Tse3_jacobian.cpp  Tse3_jacobian.h  Tso3.cpp  Tso3.h  Tso3_jacobian.cpp  Tso3_jacobian.h  Ttools.cpp  Ttools.h  main.cpp
project_sensors/condor/eagle/: CMakeLists.txt  converter.cpp  converter.h  eagle.h  earth_eagle.cpp  earth_eagle.h  earth_eagle_att.cpp  earth_eagle_att.h  earth_eagle_final.cpp  earth_eagle_final.h  earth_eagle_osg.cpp  earth_eagle_osg.h  logic.h  planet_eagle.cpp  planet_eagle.h
project_sensors/condor/eagle_test/: CMakeLists.txt  Tcamera.cpp  Tcamera.h  Teagle.cpp  Teagle.h  Teagle_zones.cpp  Teagle_zones.h  Tmode.cpp  Tmode.h  Tplanet_eagle.cpp  Tplanet_eagle.h  eagle_test.h  main.cpp
project_sensors/condor/env/: CMakeLists.txt  atm.cpp  coord.cpp  coord.h  earth.cpp  earth.h  geo.cpp  geo.h  geo2.cpp  logic.h  mag.cpp  mag.h  offsets.cpp  offsets.h  speed.cpp  speed.h  turb.cpp  turb.h  wind.cpp  wind.h
project_sensors/condor/env_test/: CMakeLists.txt  Tenv_plots_phd.cpp  Tenv_plots_phd.h  Tenvironment.cpp  Tenvironment.h  Tgravity.cpp  Tmagnetic.cpp  Tturb.cpp  main.cpp
project_sensors/condor/jail/: CMakeLists.txt
project_sensors/condor/math/: CMakeLists.txt
project_sensors/condor/math/logic/: log_writer_mgr.cpp  log_writer_mgr.h  logic.h  seeder.cpp  seeder.h  share.cpp  share.h  timer.h
project_sensors/condor/math/math/: low_pass.cpp  low_pass.h
project_sensors/condor/math/pred/: classifiers.h
project_sensors/condor/math/pred/pred0v/: f_constant.cpp  f_constant.h  f_null.cpp  f_null.h
project_sensors/condor/math/pred/pred1v/: f_cubic.cpp  f_cubic.h  f_lineal.cpp  f_lineal.h  f_parabolic.cpp  f_parabolic.h  f_steps.cpp  f_steps.h  f_table1V.h  f_table1V_spl.cpp  f_table1V_spl.h
project_sensors/condor/math/pred/pred2v/: f_lineal_double.cpp  f_lineal_double.h  f_table2V.cpp  f_table2V.h  f_tabular2V.cpp  f_tabular2V.h
project_sensors/condor/math/pred/pred3v/: f_lineal_triple.cpp  f_lineal_triple.h  f_table3V.cpp  f_table3V.h  f_tabular3V.cpp  f_tabular3V.h
project_sensors/condor/math/pred/pred4v/: f_table4V.cpp  f_table4V.h  pred4v.h
project_sensors/condor/math/templates/: math_.h  metrics_.h
project_sensors/condor/math_test/: CMakeLists.txt  Tdecompose.cpp  Tdecompose.h  Tdistributions.cpp  Tdistributions.h  Tinterp.cpp  Tinterp.h  Tlow_pass.cpp  Tlow_pass.h  Tmetrics.cpp  Tmetrics.h  Tpre_fun.cpp  Tpre_fun.h  main.cpp  math_test.h
